refactor: migrate to Express framework
- Replace native http with Express
- Add /hi endpoint with middleware
- Update root endpoint to use Express syntax
- Configure nodemon for development

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/jenny0714/bank/issues"
   },
-  "homepage": "https://github.com/jenny0714/bank#readme"
+  "homepage": "https://github.com/jenny0714/bank#readme",
+  "dependencies": {
+    "express": "^4.21.2"
+  }
 }
