feat: add CORS support
- Install cors package
- Configure basic CORS middleware to handle cross-origin requests
- Clean up code style with consistent semicolons

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/jenny0714/bank#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   }
 }
